--- a/app/src/main/res/layout/new_post.xml
+++ b/app/src/main/res/layout/new_post.xml
@@ -33,6 +33,12 @@
                 android:hint="Enter tips line by line" />
         </android.support.design.widget.TextInputLayout>
 
+        <EditText
+            android:id="@+id/txtLink"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Add link" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
